--- a/style.css
+++ b/style.css
@@ -16,9 +16,11 @@ nav{
     position: fixed;
     top: -1px;
     background-color: black;
+    z-index: 1;
 }
 .title{
     margin-left: 60px;
+    display: inline;
 }
 
 .title a{
@@ -424,6 +426,25 @@ footer{
 }
 
 /* media query */
+@media only screen and (max-width: 1380px) {
+    nav{
+        width: 100%;
+        display: flex;
+        /* position: relative; */
+        flex-direction: column;
+    }
+    .navbar {
+        display: flex;
+        position: relative;
+        justify-content: flex-end;
+        top: -70px;
+        
+    }
+@media only screen and (max-width: 1069px) {
+    main {
+        margin-bottom: 200px;
+    }
+}
 
 @media only screen and (max-width: 768px) {
     
@@ -486,8 +507,9 @@ footer{
     .navbar{
         display: flex;
         justify-content: center;
+        position: relative;
         margin-left: 0px;
-        margin-bottom: 10px;
+        top: 0px;
     }
 
     .navbar a{
@@ -637,15 +659,13 @@ footer{
 }
 
 
-
-
 @media only screen and (max-width: 480px) {
-    
+
     .test1{
         display: flex;
         flex-direction: column;
         padding-bottom: 60px;
-    
+
     }
     .test2{
         display: flex;
@@ -654,94 +674,7 @@ footer{
 
     main{
         display: flex;
-        flex-direction: column;
-        height: max-content;
         align-items: center;
-    }
-
-    .flight{
-        margin-bottom: 50px;
-        
-    }
-    .car{
-        margin-bottom: 50px; 
-    }
-    .hotel{
-        margin-bottom: 50px;
-
-    }
-    .things{
-        margin-bottom: 50px; 
-    }
-
-    .title {
-        text-decoration: none;
-        color:white;
-        display: flex;
-        justify-content: center;
-        font-size: 15px;
-        margin-bottom: 0px;
-        margin-left: 0px;
-    }
-    .navbar{
-        display: flex;
-        justify-content: center;
-        margin-left: 0px;
-        margin-bottom: 10px;
-    }
-
-    .navbar a{
-        padding-top: 0px;
-    }
-
-    nav{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-    }
-
-    header{
-        background-size: 100% 300px;
-        height: 300px;
-    }
-
-    header h1{
-        padding-top: 110px;
-        font-size: 25px;
-        margin-top: 0px;
-    }
-    header i{
-            font-size: 20px;
-            font-weight: 300;
-    }
-    header button{
-        margin-top: 30px;
-        padding: 5px 10px 5px 10px;
-        text-align: center;
-        background-color: lightskyblue;
-        border-radius: 5%;
-        border: 0px;
-        font-size: 15px;
-        font-weight: 600;
-        outline: none;
-    }
-}
-
-@media only screen and (max-width: 480px) {
-
-    .test1{
-        display: flex;
-        flex-direction: column;
-        padding-bottom: 60px;
-
-    }
-    .test2{
-        display: flex;
-        flex-direction: column;
-    }
-
-    main{
-        display: flex;
         flex-direction: column;
         height: max-content;
     }
@@ -770,7 +703,8 @@ footer{
     }
 
     nav{
-        width: max-content;
+        width: 100%;
+
     }
 
     header{
@@ -840,6 +774,7 @@ footer{
         border: 0px;
         outline: none;
         position: relative;
+        z-index: 0;
         /* left: 80px; */
         /* top: -30px; */
         /* margin: 10px; */
