--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     font-family: 'Muli', sans-serif;
     background-color: white;
     margin: 0px;
+    overflow-x: hidden;
   
 }
 
@@ -419,6 +420,25 @@ footer{
 }
 
 /* media query */
+@media only screen and (max-width: 1380px) {
+    nav{
+        width: 100%;
+        display: flex;
+        /* position: relative; */
+        flex-direction: column;
+    }
+    .navbar {
+        display: flex;
+        position: relative;
+        justify-content: flex-end;
+        top: -70px;
+        
+    }
+@media only screen and (max-width: 1069px) {
+    main {
+        margin-bottom: 200px;
+    }
+}
 
 @media only screen and (max-width: 768px) {
     
@@ -481,8 +501,9 @@ footer{
     .navbar{
         display: flex;
         justify-content: center;
+        position: relative;
         margin-left: 0px;
-        margin-bottom: 10px;
+        top: 0px;
     }
 
     .navbar a{
@@ -632,15 +653,13 @@ footer{
 }
 
 
-
-
 @media only screen and (max-width: 480px) {
-    
+
     .test1{
         display: flex;
         flex-direction: column;
         padding-bottom: 60px;
-    
+
     }
     .test2{
         display: flex;
@@ -649,50 +668,37 @@ footer{
 
     main{
         display: flex;
+        align-items: center;
         flex-direction: column;
         height: max-content;
-        align-items: center;
     }
 
     .flight{
-        margin-bottom: 50px;
-        
+        margin-bottom: 50px
     }
     .car{
-        margin-bottom: 50px; 
+        margin-bottom: 50px
     }
     .hotel{
-        margin-bottom: 50px;
-
+        margin-bottom: 50px
     }
     .things{
-        margin-bottom: 50px; 
+        margin-bottom: 50px
     }
 
     .title {
         text-decoration: none;
         color:white;
-        display: flex;
-        justify-content: center;
-        font-size: 15px;
-        margin-bottom: 0px;
-        margin-left: 0px;
-    }
-    .navbar{
-        display: flex;
-        justify-content: center;
-        margin-left: 0px;
-        margin-bottom: 10px;
+        font-weight: 900;
     }
 
-    .navbar a{
-        padding-top: 0px;
+    .title a{
+        text-align: center;
     }
 
     nav{
         width: 100%;
-        display: flex;
-        flex-direction: column;
+
     }
 
     header{
@@ -702,7 +708,7 @@ footer{
 
     header h1{
         padding-top: 110px;
-        font-size: 25px;
+        font-size: 30px;
         margin-top: 0px;
     }
     header i{
@@ -720,6 +726,96 @@ footer{
         font-weight: 600;
         outline: none;
     }
+    #service{
+        height: 600px;
+        padding-top: 100px;
+        background-image: url("Images/wallpaper5.jpg");
+        background-size: 100% 700px;
+        background-repeat: no-repeat;
+    }
+    .transparent_box{
+        margin-top: -40px;
+        margin-left: 40px;
+        background-color:  rgb(0, 0, 0,0.5);
+        height: 600px;
+        width: 80%;
+    }
+    .buttons button{
+        /* display: flex;
+        flex-direction: row; */
+        padding: 10px 15px 10px 15px;
+        background-color: lightskyblue;
+        border-radius: 5%;
+        border: 0px;
+        font-size: 14px;
+        font-weight: 600;
+        outline: none;
+    }
+    .buttons button:hover{
+        background-color: #23a5f6;
+    }
+    #label{
+        margin-top: 10px;
+        color: white;
+        font-size: 16px;
+        margin-left: 10px;
+    }
+    #label input{
+        width: 160px;
+        height: 20px;
+        font-size: 14px;
+        margin: 25px;
+        border: 0px;
+        outline: none;
+        position: relative;
+        z-index: 0;
+        /* left: 80px; */
+        /* top: -30px; */
+        /* margin: 10px; */
+    
+    }
+    .label_button button:hover{
+        background-color: #23a5f6;
+    }
+    
+    .label_button{
+        margin-top: 50px;
+        margin-left: 110px;
+    }
+    .label_button button{
+        padding: 10px 15px 10px 15px;
+        background-color: lightskyblue;
+        border-radius: 5%;
+        border: 0px;
+        font-size: 20px;
+        font-weight: 600;
+        outline: none;
+    }
+
+    #flight_button {
+        width: 116px;
+        margin-left: -8px;
+    }
+    #hotel_button {
+        margin-top: 3px;
+        margin-right: 25px;
+        margin-left: -8px;
+        width: 116px;
+    }
+    #things_button {
+        margin-right: 25px;
+        margin-left: -25px;
+    }
+    #car_button {
+        width: 116px;
+    }
+    #label input {
+  
+        /* position: fixed */
+    }
+    /* .navbar{
+        display: none;
+    } */
+
+
 }
-
-
