--- a/style.css
+++ b/style.css
@@ -659,7 +659,7 @@ footer{
 }
 
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 674px) {
 
     .test1{
         display: flex;
@@ -815,11 +815,12 @@ footer{
     #car_button {
         width: 116px;
     }
-    #label input {
+    /* #label input {
   
         /* position: fixed */
-    }
+  
     /* .navbar{
         display: none;
     } */
+}
 }
