--- a/style.css
+++ b/style.css
@@ -2,11 +2,7 @@ body{
     margin-left: 0px;
     font-family: 'Muli', sans-serif;
     background-color: white;
-<<<<<<< HEAD
-    margin: 0px;
-=======
     width: 100%;
->>>>>>> 91a421c54c7cb5c47345429f7a598622f92dbef7
     overflow-x: hidden;
   
 }
@@ -819,13 +815,14 @@ footer{
     #car_button {
         width: 116px;
     }
-    #label input {
+    /* #label input { */
   
         /* position: fixed */
-    }
+    
     /* .navbar{
         display: none;
     } */
 
 
+}
 }
