--- a/style.css
+++ b/style.css
@@ -380,7 +380,7 @@ footer{
 /* results */
 #results{
     height: max-content;
-    padding-top: 100px;
+    /* padding-top: 100px; */
     background-size: 1280px 700px;
     background-repeat: no-repeat;
 }
@@ -444,7 +444,7 @@ footer{
 }
 
 /* media query */
-@media only screen and (max-width: 1380px) {
+@media only screen and (max-width: 1480px) {
     nav{
         width: 100%;
         display: flex;
@@ -1093,4 +1093,15 @@ footer{
         position: relative;
         left: 45px;
     }
+}
+#info {
+    padding-top: 100px;
+}
+#result-title {
+    margin-top: 21px;
+    font-weight: bold
+}
+#rightNav {
+    margin-top: 27px;
+    margin-right: 20px;
 }
