--- a/style.css
+++ b/style.css
@@ -6,6 +6,62 @@ body{
     overflow-x: hidden;
     margin: 0px;
 }
+
+/* popup */
+    .popup{
+    width: 100%;
+    margin: 0 auto;
+    display: none;
+    position: fixed;
+    z-index: 3;
+    }
+    .popup_box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 0px;
+    width: 600px;
+    height: 400px;
+    margin: 100px auto;
+    background: white;
+    position: relative;
+    padding: 15px 35px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px #000;
+    }
+    .popup_box h1{
+        font-size: 40px;
+        margin-bottom: 0px;
+    }
+    .popup_box p{
+        font-size: 15px;
+        margin-left: 150px;
+        margin-right: 150px;
+        text-align: center;
+    }
+
+    .popup_box button{
+        padding: 10px 100px 10px 100px;
+        font-size: 24px;
+        font-weight: 600;
+    }
+
+    .popup_box input{
+        font-size: 24px;
+        height: 40px;
+        width: 321px;
+        margin-bottom: 20px;
+    }
+    .popup_box a{
+    color: #d91900;
+    font-weight: bold;
+    text-decoration: none;
+    margin-left: 590px;
+    }
+
+
+
+/* nav bar */
 .main_search {
     position: relative;
     top: -70px;
@@ -507,6 +563,9 @@ footer{
 }
 
 @media only screen and (max-width: 768px) {
+    .popup{
+        display: none;
+    }
     
     .test1{
         display: flex;
