--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ body{
     z-index: 3;
     }
     .popup_box{
+    opacity: 0.9;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -147,7 +148,7 @@ nav{
 }
 /* header */
 header{
-    background-image: url("Images/wallpaper2.jpg");
+    background-image: url("Images/wallpaper7.jpg");
     /* background-position-x: -28px; */
     
     background-size: 100% 640px;
@@ -425,7 +426,7 @@ footer{
 #service{
     height: 600px;
     padding-top: 100px;
-    background-image: url("Images/wallpaper5.jpg");
+    background-image: url("Images/wallpaper9.jpg");
     background-size: 100% 700px;
     background-repeat: no-repeat;
 }
@@ -495,7 +496,7 @@ footer{
 #bundle{
     height: 600px;
     padding-top: 100px;
-    background-image: url("Images/wallpaper6.jpg");
+    background-image: url("Images/wallpaper8.jpg");
     background-size: 100% 700px;
     background-repeat: no-repeat;
 }
